[metadata]
name = bs_patcher
version = 0.0.0
description = BigSMILES forcefile generator
long_description = file: README.md
long_description_content_type = text/markdown
author = de Pablo group PME, Uchicago
url = https://github.com/depablogroup/BSpatcher
license = GNUv3
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
